--- a/resources/style.css
+++ b/resources/style.css
@@ -1,32 +1,55 @@
+@import url("kenney-icons.css");
+@import url('https://fonts.googleapis.com/css2?family=Oswald:wght@400;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Rajdhani:wght@400;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,400;0,700;1,400;1,700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Biryani:wght@600&display=swap');
+
+@font-face {
+  font-family: "FontAwesome";
+  src: url("fontawesome-webfont.eot");
+  src: url("fontawesome-webfont.eot") format("embedded-opentype"),
+    url("fontawesome-webfont.ttf") format("truetype"),
+    url("fontawesome-webfont.woff") format("woff"),
+    url("fontawesome-webfont.svg") format("svg");
+}
+
 * {
-	margin: 0; padding:0;				 
+  margin: 0;
+  padding: 0; 
 }
 
 html {
-   background: black;
-   margin:0;
-   padding: 0;
-/*   font-family: "Roboto", "KenneyIcons", "FontAwesome"; */
-   font-weight: 400;
-   left: 0;
-  /* padding-bottom: 56.25%; */
+  background: black;
+  margin: 0;
+  padding: 0;    
+  left: 0;
+  /* padding-bottom: 56.25%;
    width: 100%;
-   height: 100%;
+   height: 100%; */
+
 }
 body {
-   margin: 0;
-   position: absolute;
-   background: #aaa;										
-   width: 100%;
-   height: 100%;
-}		
-div {
-   display: inline;
+  margin: 0;
+  padding: 0;
+  position: absolute;
+  background: url("bg.png");  
+  background-color: #aaa;
+  width: 100%;
+  height: 100%;
 }
+div {
+  font-family: "Roboto", "KenneyIcons", "FontAwesome"; 
+  font-weight: 400;
+} 
+
 span {
-   white-space: normal;
-	  word-break: break-word;						
-}	
-input{
-   background: rgba(0,0,0,0.6);
+  white-space: pre;
+  word-break: break-word;
+}
+input {
+  background: rgba(0, 0, 0, 0.6);
+}
+textarea {
+  background-color: #0004;
+  color: white; 
 }
