--- a/resources/style.css
+++ b/resources/style.css
@@ -1,7 +1,6 @@
 @import url("kenney-icons.css");
 @import url('https://fonts.googleapis.com/css2?family=Oswald:wght@400;700&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Rajdhani:wght@400;700&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,400;0,700;1,400;1,700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Rajdhani:wght@400;500;700&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Biryani:wght@600&display=swap');
 
 @font-face {
@@ -37,9 +36,10 @@ body {
   width: 100%;
   height: 100%;
 }
-div {
-  font-family: "Roboto", "KenneyIcons", "FontAwesome"; 
-  font-weight: 400;
+
+span {
+  font-family: "Rajdhani", "KenneyIcons", "FontAwesome"; 
+  font-weight: 500;
 } 
 
 span {
